# workflow-project

./: .directory  .gitignore  AUTHORS  Activities.qmlproject  Activities2.qml  ActivitiesModel1.qml  Activity.qml  ActivityAnimationMainView.qml  ActivityBtns.qml  ActivityDeleg.qml  ActivityStopped.qml  ActivityStoppedDeleg.qml  AddWorkAreaButton.qml  AllActTaskDeleg.qml  AllActivitiesTasks.qml  BtnIconAnimatMainView.qml  CMakeLists.txt  CONTRIBUTORS  ChangeLog  DTextEdit.qml  DTextLine.qml  DraggingInterface.qml  DynamicAnimations.js  GlobalAnimations.qml  MainAddActivityButton.qml  README  README.md  Rect.qml  SharedActivitiesList.qml  SharedTasksList.qml  SharedWorkareasList.qml  ShowWindowsButton.qml  StoppedActivitiesPanel.qml  TODO  TRANSLATIONS  TaskAnimationMainView.qml  TasksList.qml  TitleMainView.qml  WorkArea.qml  WorkAreaBtns.qml  (+24 more)
components/: CMakeLists.txt  activitymanager.cpp  activitymanager.h  componentsplugin.cpp  componentsplugin.h  environmentmanager.cpp  environmentmanager.h  icondialog.cpp  icondialog.h  plasmoidwrapper.cpp  plasmoidwrapper.h  previewsmanager.cpp  previewsmanager.h  ptaskmanager.cpp  ptaskmanager.h  sessionparameters.cpp  sessionparameters.h  workflowcomponentsplugin.cpp  workflowcomponentsplugin.h  workflowmanager.cpp  workflowmanager.h
components/models/: CMakeLists.txt  activitiesenhancedmodel.cpp  activitiesenhancedmodel.h  activityitem.cpp  activityitem.h  filtertaskmodel.cpp  filtertaskmodel.h  listitem.cpp  listitem.h  listmodel.cpp  listmodel.h  qmlsortfilterproxymodel.cpp  qmlsortfilterproxymodel.h  taskitem.cpp  taskitem.h  workareaitem.cpp  workareaitem.h
components/qml/: qmldir
components/subengines/: CMakeLists.txt  activitymanager.cpp  activitymanager.h  workareasdata.kcfgc  workareasmanager.cpp  workareasmanager.h
components/subengines/plugins/: CMakeLists.txt  pluginaddactivity.h  pluginchangeworkarea.cpp  pluginchangeworkarea.h  plugincloneactivity.cpp  plugincloneactivity.h  plugindelayactivitiesordering.cpp  plugindelayactivitiesordering.h  pluginfindwallpaper.cpp  pluginfindwallpaper.h  pluginremoveactivity.cpp  pluginremoveactivity.h  pluginshowwidgets.cpp  pluginsyncactivitiesworkareas.cpp  pluginupdateworkareasname.cpp  pluginupdateworkareasname.h
components/subengines/workareas/: CMakeLists.txt  info.cpp  store.cpp  store.h
dataengines/: CMakeLists.txt  plasma-engine-workareas.desktop  workareaengine.cpp  workareaengine.h  workareajob.cpp  workareajob.h  workareas.operations  workareaservice.cpp  workareaservice.h
dataengines/workareas/: CMakeLists.txt  info.cpp  info.h  store.cpp  store.h
dataengines/workareas/plugins/: CMakeLists.txt  pluginfindwallpaper.cpp  pluginfindwallpaper.h
qdbus/: Application.cpp  Application.h  CMakeLists.txt  Store.cpp  Store.h  WorkareaManager.cpp  WorkareaManager.h  info.cpp  info.h  org.opentoolsandspace.WorkareaManager.Store.xml  org.opentoolsandspace.WorkareaManager.service  org.opentoolsandspace.WorkareaManager.xml  update.sh  workareainfo.cpp  workareainfo.h  workareamanagerd.desktop  workareas.kcfg
qdbus/client/: storeinterface.cpp  storeinterface.h  workareainterface.cpp  workareainterface.h
qdbus/mechanism/: CMakeLists.txt  cloneactivityclass.cpp  cloneactivityclass.h  findwallpaper.cpp  findwallpaper.h  mechanismupdateworkareasname.cpp  mechanismupdateworkareasname.h  pluginsyncactivitiesworkareas.h  syncactivitiesworkareas.cpp  syncactivitiesworkareas.h  updateworkareasname.cpp  updateworkareasname.h
qdbus/plugins/: CMakeLists.txt  pluginfindwallpaper.cpp  pluginfindwallpaper.h
qml/: Activities2.qml  AllActivitiesTasks.qml  CMakeLists.txt  DraggingInterface.qml  DynamicAnimations.js  MainAddActivityButton.qml  StoppedActivitiesPanel.qml  TaskAnimationMainView.qml  TitleMainView.qml  WorkAreasAllLists.qml  ZoomSliderItem.qml
qml/Images/: CMakeLists.txt
qml/Images/backgrounds/: CMakeLists.txt
qml/Images/buttons/: .directory  CMakeLists.txt
qml/Images/icons/: CMakeLists.txt
qml/Images/textures/: CMakeLists.txt
qml/delegates/: ActivityBtns.qml  ActivityDeleg.qml  ActivityStoppedDeleg.qml  AddWorkAreaButton.qml  AllActTaskDeleg.qml  AllActTaskDelegAnimations.qml  AllTaskDelegButtons.qml  CMakeLists.txt  DTextEdit.qml  DTextLine.qml  TaskPreviewDeleg.qml  TaskPreviewDelegAnimations.qml  WATaskDelegButtons.qml  WorkAreaBtns.qml  WorkAreaDeleg.qml  WorkAreaImage.qml  WorkAreaListDeleg.qml  WorkAreaOrphanTaskDeleg.qml  WorkAreaTaskDeleg.qml
qml/delegates/ui-elements/: ActivityBtns.qml  AddWorkAreaButton.qml  AllTaskDelegButtons.qml  CMakeLists.txt  CloseWindowButton.qml  (+10 more)
qml/helptour/: CMakeLists.txt  TourDialog.qml
qml/instances/: ActivitiesWorker.js  CMakeLists.txt  SharedActivitiesList.qml  SharedTasksList.qml  SharedWorkareasList.qml
qml/models/: ActivitiesModel1.qml  CMakeLists.txt  TasksDesktopList.qml  TasksList.qml  WorkAreasCompleteModel.qml
qml/ui/: CMakeLists.txt  CalibrationDialogTmpl.qml  DesktopDialogTmpl.qml  DialogTemplate.qml  RemoveDialogTmpl.qml  WindowPlaceButton.qml  WorkAreaFull.qml
src/: CMakeLists.txt  activitymanager.cpp  activitymanager.h  config.ui  environmentmanager.cpp  environmentmanager.h  parametersmanager.cpp  parametersmanager.h  previewsmanager.cpp  previewsmanager.h  ptaskmanager.cpp  ptaskmanager.h  storedparameters.cpp  storedparameters.h  workareas.kcfg  workareasmanager.cpp  workareasmanager.h  workflow.cpp  workflow.h  workflowConfig.ui  workflowmanager.cpp  workflowmanager.h
src/models/: CMakeLists.txt  activitiesenhancedmodel.cpp  activitiesenhancedmodel.h  activityitem.cpp  activityitem.h  activityitem.h.gch  listmodel.cpp  listmodel.h  taskitem.cpp  taskitem.h  workareaitem.cpp  workareaitem.h
src/package/: CMakeLists.txt  metadata.desktop.cmake
src/plugins/: CMakeLists.txt  pluginaddactivity.cpp  pluginaddactivity.h  pluginchangeworkarea.cpp  pluginchangeworkarea.h  plugincloneactivity.cpp  plugincloneactivity.h  pluginfindwallpaper.cpp  pluginfindwallpaper.h  pluginremoveactivity.h  pluginshowwidgets.cpp  pluginshowwidgets.h  pluginsyncactivitiesworkareas.h  pluginupdateworkareasname.cpp
(+295 files in other folders)
