install(FILES 
	  activeActivitiesBorderImage.png
	  activitiesBack.png
	  activitiesBack2.png
	  activitiesBack2Shadow.png
	  activitiesBorderImage.png
	  addWorkAreaBtn.png
	  greyBackground.png
	  stoppedActivitiesBack.png
	  stoppedWorkArea.png
	  workAreasSeparator.png
        DESTINATION ${KDE4_DATA_INSTALL_DIR}/plasma-workflowplasmoid/qml/Images)

add_subdirectory(backgrounds)
add_subdirectory(buttons)        
add_subdirectory(icons)        
add_subdirectory(textures)        
        