install(FILES 
	    ActivityBtns.qml
	    ActivityDeleg.qml
	    ActivityStoppedDeleg.qml
	    AllActTaskDeleg.qml
	    AllTaskDelegButtons.qml
	    WATaskDelegButtons.qml
	    WorkAreaBtns.qml
	    WorkAreaDeleg.qml
	    WorkAreaImage.qml
	    WorkAreaListDeleg.qml
	    WorkAreaOrphanTaskDeleg.qml
	    WorkAreaTaskDeleg.qml
        DESTINATION ${KDE4_DATA_INSTALL_DIR}/plasma-workflowplasmoid/qml/delegates)
        