install(FILES 
	      activityIconFade.png
	      addActivity1.png
	      addActivity2.png
              blueCorner.png
	      blueWindowsIcon.png
              brownCorner.png
	      cloneActivity.png
	      close_window.png
	      darkPencil.png
	      darkTick.png
	      editBox.png
	      editBox2.png
	      editBoxHover2.png
              greyRectShadow2.png
	      lightTick.png
	      listPencil.png
	      zoom_in.png
	      zoom_out.png
	      magnifyingglass.png
	      mail_delete.png
	      nowindowsadd.png
	      nowindowsicon.png
	      player_play.png
	      player_stop.png
	      Padlock-gold.png
	      selectedBlue.png
	      selectedGrey.png	      
	      titleLight.png
	      titleShadow.png
	      tools_wizard.png
	      window_duplicate.png
	      windowsicon.png
	      withwindowsicon.png
	      withwindowsminus.png
	      workarea_delete.png
        DESTINATION ${KDE4_DATA_INSTALL_DIR}/plasma-workflowplasmoid/qml/Images/buttons)

add_subdirectory(plasma_ui)
        
