install(FILES 
             ActivityBtns.qml
             AddWorkAreaButton.qml
             AllTaskDelegButtons.qml
             CloseWindowButton.qml
             DTextEdit.qml
             DTextLine.qml
             ToggleButton.qml
             WATaskDelegButtons.qml
	     WindowButton.qml
	     WindowPlaceButton.qml
             WorkAreaBtns.qml
             WorkAreaImage.qml
DESTINATION ${KDE4_DATA_INSTALL_DIR}/plasma-workflowplasmoid/qml/delegates/ui-elements/)
        
