install(FILES 
             ActivityBtns.qml
             AddWorkAreaButton.qml
             CloseWindowButton.qml
             DTextEdit.qml
             DTextLine.qml
             MoreButton.qml
             TaskPreviewButtons.qml
             ToggleButton.qml
             WATaskDelegButtons.qml
	     WindowButton.qml
	     WindowPlaceButton.qml
             WorkAreaBtns.qml
             WorkAreaImage.qml
DESTINATION ${KDE4_DATA_INSTALL_DIR}/plasma-workflowplasmoid/qml/delegates/ui-elements/)
        
