install(FILES 
	    background1.jpg
	    background2.jpg
	    background3.jpg
	    background4.jpg
	    background5.jpg
	    emptydesk1.png
	    emptydesk2.png
	    emptydesk3.png
	    emptydesk4.png
	    screenglass.png
        DESTINATION ${KDE4_DATA_INSTALL_DIR}/plasma-workflowplasmoid/qml/Images/backgrounds)
      
        