install(FILES 
	    allDesktops.png
	    allDesktopsHov.png
	    blueShadow.png
	    closeWindow.png
	    closeWindowHov.png
	    everywhereW.png
	    everywhereWHov.png
	    greyShadow.png
	    lockedIcon.png
	    oneDesktop.png
	    oneDesktopHov.png
	    redShadow.png
	    unlockedIcon.png
        DESTINATION ${KDE4_DATA_INSTALL_DIR}/plasma-workflowplasmoid/qml/Images/buttons/plasma_ui)

        