install(FILES 
	    allDesktops.png
	    allDesktopsHov.png
	    blueShadow.png
	    blueRectShadow.png
	    closeWindow.png
	    closeWindowHov.png
	    everywhereW.png
	    everywhereWHov.png
	    greyShadow.png
	    lockedIcon.png
	    moreBlue.png
	    moreGrey.png
	    moreRed.png
            moreBlueVer.png
            moreGreyVer.png
            moreRedVer.png
            oneDesktop.png
	    oneDesktopHov.png
	    redShadow.png
	    redRectShadow.png
	    unlockedIcon.png
	    greyRectShadow.png
        DESTINATION ${KDE4_DATA_INSTALL_DIR}/${CMAKE_PROJECT_NAME}/qml/Images/buttons/plasma_ui)

        
